Removed unnecessary files and updated project structure